# bidbridge

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
bidbridge/: cli.py  config.py  demo.py  paths.py  run_manifest.py  schemas.py
bidbridge/analysis/: __init__.py  data_audit.py  event_studies.py  local_projections.py  outputs.py  panel_fe.py  persistence.py  pressure_monitor.py  regressions.py  site_data.py
bidbridge/data/: __init__.py  pipeline.py  registry.py
bidbridge/data/sources/: __init__.py  (+7 more)
bidbridge/features/: __init__.py  auction_week.py  bridge_metrics.py  maturity_panel.py  stress_flags.py
codex/: README.md  tasks.json
codex/prompts/: 01_foundation.md  02_ingestion.md  03_panel.md  04_analysis.md  05_public_repo.md
configs/: sources.yml  study.yml
data/: README.md
docs/: architecture.md  data_sources.md  empirical_design.md  panel_spec.md  plan.md  public_repo_checklist.md  source_guide.md
notebooks/: README.md  exploration.ipynb
outputs/: README.md
scripts/: bootstrap.sh  build_demo_panel.py  codex_task_runner.py  make_demo_data.py  maturity_analysis.py  verify_repo.py
site/: app.js  index.html  styles.css
site/data/: bidbridge.json  upcoming_pressure_monitor.json
tests/: test_audit_and_monitor.py  test_bridge_metrics.py  test_cli_run_all.py  test_config.py  test_demo_pipeline.py  test_edge_cases.py  test_fetcher_parsers.py  test_fetchers.py  test_local_projections_outputs.py  test_paths.py  test_registry.py  test_reporting_outputs.py  test_week_definition.py
